@@ -115,17 +115,16 @@ class SOLARUS_API EntityData : public LuaData {
     Point get_xy() const;
     void set_xy(const Point& xy);
 
+    static bool is_user_property_key_valid(const std::string& key);
     const std::vector<UserProperty>& get_user_properties() const;
+    void set_user_properties(const std::vector<UserProperty>& user_properties);
     int get_user_property_count() const;
     const UserProperty& get_user_property(int index) const;
     void set_user_property(int index, const UserProperty& user_property);
     void add_user_property(const UserProperty& user_property);
     void remove_user_property(int index);
-
     int get_user_property_index(const std::string& key) const;
     bool has_user_property(const std::string& key) const;
-    const std::string& get_user_property_value(const std::string& key) const;
-    void set_user_property_value(const std::string& key, const std::string& value);
 
     // Specific properties.
     void initialize_specific_properties();
