@@ -426,8 +426,8 @@ int LuaContext::l_create_tile(lua_State* l) {
     // If the tile is big, divide it in several smaller tiles so that
     // most of them can still be optimized away.
     // Otherwise, tiles expanded in big rectangles like a lake or a dungeon
-    // floor would be entirely redrawn at each frame if just one small
-    // animated tile overlapped them.
+    // floor would be entirely redrawn at each frame when just one small
+    // animated tile overlaps them.
 
     TileInfo tile_info;
     tile_info.layer = layer;
@@ -471,6 +471,7 @@ int LuaContext::l_create_destination(lua_State* l) {
     StartingLocationMode starting_location_mode =
         entity_creation_check_enum<StartingLocationMode>(l, 1, data, "starting_location_mode");
     entity->set_starting_location_mode(starting_location_mode);
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
 
     if (map.is_started()) {
@@ -503,6 +504,7 @@ int LuaContext::l_create_teletransporter(lua_State* l) {
         data.get_string("destination_map"),
         data.get_string("destination")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
 
     if (map.is_started()) {
@@ -553,6 +555,7 @@ int LuaContext::l_create_pickable(lua_State* l) {
       return 1;
     }
 
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
 
     if (map.is_started()) {
@@ -593,6 +596,7 @@ int LuaContext::l_create_destructible(lua_State* l) {
     destructible->set_can_explode(data.get_boolean("can_explode"));
     destructible->set_can_regenerate(data.get_boolean("can_regenerate"));
     destructible->set_damage_on_enemies(data.get_integer("damage_on_enemies"));
+    destructible->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(destructible);
     if (map.is_started()) {
       push_entity(l, *destructible);
@@ -657,6 +661,7 @@ int LuaContext::l_create_chest(lua_State* l) {
     chest->set_opening_condition(opening_condition);
     chest->set_opening_condition_consumed(data.get_boolean("opening_condition_consumed"));
     chest->set_cannot_open_dialog_id(data.get_string("cannot_open_dialog"));
+    chest->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(chest);
     if (map.is_started()) {
       push_entity(l, *chest);
@@ -685,6 +690,7 @@ int LuaContext::l_create_jumper(lua_State* l) {
         data.get_integer("direction"),
         data.get_integer("jump_length")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -724,6 +730,7 @@ int LuaContext::l_create_enemy(lua_State* l) {
       lua_pushnil(l);
       return 1;
     }
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -755,6 +762,7 @@ int LuaContext::l_create_npc(lua_State* l) {
         data.get_integer("direction"),
         data.get_string("behavior")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -791,6 +799,7 @@ int LuaContext::l_create_block(lua_State* l) {
         data.get_boolean("pullable"),
         maximum_moves
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -820,6 +829,7 @@ int LuaContext::l_create_dynamic_tile(lua_State* l) {
         data.get_string("pattern"),
         data.get_boolean("enabled_at_start")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -850,6 +860,7 @@ int LuaContext::l_create_switch(lua_State* l) {
         data.get_boolean("needs_block"),
         data.get_boolean("inactivate_when_leaving")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -881,6 +892,7 @@ int LuaContext::l_create_wall(lua_State* l) {
         data.get_boolean("stops_blocks"),
         data.get_boolean("stops_projectiles")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -907,6 +919,7 @@ int LuaContext::l_create_sensor(lua_State* l) {
         data.get_xy(),
         entity_creation_check_size(l, 1, data)
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -932,6 +945,7 @@ int LuaContext::l_create_crystal(lua_State* l) {
         entity_creation_check_layer(l, 1, data, map),
         data.get_xy()
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -961,6 +975,7 @@ int LuaContext::l_create_crystal_block(lua_State* l) {
         entity_creation_check_size(l, 1, data),
         CrystalBlock::Subtype(data.get_integer("subtype"))
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1002,6 +1017,7 @@ int LuaContext::l_create_shop_treasure(lua_State* l) {
       return 1;
     }
 
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1033,7 +1049,7 @@ int LuaContext::l_create_stream(lua_State* l) {
     stream->set_allow_movement(data.get_boolean("allow_movement"));
     stream->set_allow_attack(data.get_boolean("allow_attack"));
     stream->set_allow_item(data.get_boolean("allow_item"));
-
+    stream->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(stream);
     if (map.is_started()) {
       push_stream(l, *stream);
@@ -1094,6 +1110,7 @@ int LuaContext::l_create_door(lua_State* l) {
     door->set_opening_condition(opening_condition);
     door->set_opening_condition_consumed(data.get_boolean("opening_condition_consumed"));
     door->set_cannot_open_dialog_id(data.get_string("cannot_open_dialog"));
+    door->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(door);
     if (map.is_started()) {
       push_entity(l, *door);
@@ -1121,6 +1138,7 @@ int LuaContext::l_create_stairs(lua_State* l) {
         data.get_integer("direction"),
         Stairs::Subtype(data.get_integer("subtype"))
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1147,6 +1165,7 @@ int LuaContext::l_create_separator(lua_State* l) {
         data.get_xy(),
         entity_creation_check_size(l, 1, data)
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1178,6 +1197,7 @@ int LuaContext::l_create_custom_entity(lua_State* l) {
         data.get_string("sprite"),
         data.get_string("model")
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1203,6 +1223,7 @@ int LuaContext::l_create_bomb(lua_State* l) {
         entity_creation_check_layer(l, 1, data, map),
         data.get_xy()
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1230,6 +1251,7 @@ int LuaContext::l_create_explosion(lua_State* l) {
         data.get_xy(),
         with_damage
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
@@ -1255,6 +1277,7 @@ int LuaContext::l_create_fire(lua_State* l) {
         entity_creation_check_layer(l, 1, data, map),
         data.get_xy()
     );
+    entity->set_user_properties(data.get_user_properties());
     map.get_entities().add_entity(entity);
     if (map.is_started()) {
       push_entity(l, *entity);
